Make header fixed position on mobile device

--- a/src/containers/departureBoard/styles.scss
+++ b/src/containers/departureBoard/styles.scss
@@ -77,13 +77,16 @@
 }
 
 @media (max-width: 480px) {
-  .settings-button {
+    .departure-board {
+        margin-top: 5%;
+    }
+    .settings-button {
       display: block;
       margin: 2%;
-  }
+    }
 
-  .settings-button svg {
+    .settings-button svg {
       height: 25;
       width: 25;
-  }
+    }
 }
